  INTER-Mediator-Format.js file contains IMLibFormat object.
- Add 'asis' operator for FileMaker Server.
- All functions have 'use strict';.
- Update deploy.sh and recipe.rb etc. for the INTER-Mediator-Server virtual machine and CI.
- Field names that contain ':' can be a variable of expression. It's for FileMaker.
- The sample of Practices-search(using JavaScript) is updated.
- [INFO] The following methods are deprecated. These methods will be removed in Ver.6.0.
    INTERMediator_DBAdapter.server_access
    INTERMediator_DBAdapter.db_query
    INTERMediator_DBAdapter.db_queryWithAuth
    INTERMediator_DBAdapter.db_update
    INTERMediator_DBAdapter.db_updateWithAuth
    INTERMediator_DBAdapter.db_delete
    INTERMediator_DBAdapter.db_deleteWithAuth
    INTERMediator_DBAdapter.db_createRecord
    INTERMediator_DBAdapter.db_createRecordWithAuth
    INTERMediator_DBAdapter.db_copy
    INTERMediator_DBAdapter.db_copyWithAuth
- [INFO] Deprecated global variables $g_dbInstance, $g_serverSideCall in INTER-Mediator.php will be removed
  in Ver.6.0.
- [BUG FIX] Fix to add multiple times for target node which has "#" started target description.
- [BUG FIX] Replace the dataset property to set/get attribute methods for IE10.
- [BUG FIX] Justify the next line handling in TEXTAREA tagged element for IE9.
- [BUG FIX] Fix to disappear text and button name in the tag with data-im="_@update:..." or "_@addorder:...".
- [BUG FIX] The Auth_Manager sample in Auth_Support folder didn't work. So the UserList.php is removed.
- [BUG FIX] Master/Detail interface in mobile phone didn't return the master page from the detail page.
- [BUG FIX] Record create method under authentication prevented the 'target' setting, and it is fiexed.
- [BUG FIX] Sometimes validation wasn't work, for example, blank text field.
- [BUG FIX] The master-hide/detail contexts didn't hide the pagenation on showed the detail.