@@ -44,7 +44,7 @@
       </thead>
     <tbody>
       <tr>
-        <td data-im="chat@postdt"></td>
+        <td data-im="chat@postdt" data-im-format="datetime(middle)"></td>
         <td data-im="chat@user"></td>
         <td data-im="chat@groupname"></td>
         <td data-im="chat@message"></td>
