@@ -19,41 +19,41 @@
 </head>
 <body>
 <header>
-  <p class="logo"><img src="../images/logo_t-100.png" alt=""></p>
+    <p class="logo"><img src="../images/logo_t-100.png" alt=""></p>
 </header>
 <div id="wrapper">
-<h1>Simple but Authorized Chat</h1>
-  <table>
-    <thead>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td>
-          <input type="text" id="message">
-          <button id="postbutton">Post</button>
-          <button id="logoutbutton">Logout</button>
-          </td>
-      </tr>
-      <tr>
-        <th>Date and Time</th>
-        <th>User</th>
-        <th>Group</th>
-        <th>Message</th>
-      </tr>
-      </thead>
-    <tbody>
-      <tr>
-        <td data-im="chat@postdt"></td>
-        <td data-im="chat@user"></td>
-        <td data-im="chat@groupname"></td>
-        <td data-im="chat@message"></td>
-      </tr>
-      </tbody>
-  </table>
+    <h1>Simple but Authorized Chat</h1>
+    <table>
+        <thead>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td>
+                <input type="text" id="message">
+                <button id="postbutton">Post</button>
+                <button id="logoutbutton">Logout</button>
+            </td>
+        </tr>
+        <tr>
+            <th>Date and Time</th>
+            <th>User</th>
+            <th>Group</th>
+            <th>Message</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td data-im="chat@postdt" data-im-format="datetime(middle)"></td>
+            <td data-im="chat@user"></td>
+            <td data-im="chat@groupname"></td>
+            <td data-im="chat@message"></td>
+        </tr>
+        </tbody>
+    </table>
 </div>
 <footer>
-<small>INTER-Mediator ©2017</small>
+    <small>INTER-Mediator ©2017</small>
 </footer>
 </body>
 </html>
