@@ -80,6 +80,7 @@ Ver.5.7-RC1 (in development)
 - Update deploy.sh and recipe.rb etc. for the INTER-Mediator-Server virtual machine and CI.
 - Field names that contain ':' can be a variable of expression. It's for FileMaker.
 - The sample of Practices-search(using JavaScript) is updated.
+- The sample of Sample_chat is updated without using deprecated method.
 - [INFO] The following methods are deprecated. These methods will be removed in Ver.6.0.
     INTERMediator_DBAdapter.server_access
     INTERMediator_DBAdapter.db_query
